Apache Tez Change Log
=====================

Release 0.6.3: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2850. Tez MergeManager OOM for small Map Outputs
  TEZ-2781. Fallback to send only TaskAttemptFailedEvent if taskFailed heartbeat fails
  TEZ-2855. Fix a potential NPE while routing VertexManager events.
  TEZ-2716. DefaultSorter.isRleNeeded not thread safe.
  TEZ-2758. Remove append API in RecoveryService after TEZ-1909.
  TEZ-2851. Support a way for upstream applications to pass in a caller context to Tez.
  TEZ-2398. Flaky test: TestFaultTolerance
  TEZ-2808. Race condition between preemption and container assignment
  TEZ-2203. Intern strings in tez counters
  TEZ-2834. Make Tez preemption resilient to incorrect free resource reported
  by YARN
  TEZ-2097. TEZ-UI Add dag logs backend support
  TEZ-2812. Preemption sometimes does not respect heartbeats between preemptions
  TEZ-2097. TEZ-UI Add dag logs backend support
  TEZ-814.  Improve heuristic for determining a task has failed outputs
  TEZ-2809. Minimal distribution compiled on 2.6 fails to run on 2.7
  TEZ-2768. Log a useful error message when the summary stream cannot be closed when shutting
  down an AM.
  TEZ-2745. ClassNotFoundException of user code should fail dag
  TEZ-2752. logUnsuccessful completion in Attempt should write original finish
  time to ATS
  TEZ-2742. VertexImpl.finished() terminationCause hides member var of the
  same name
  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
  TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher.
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge.
  TEZ-2687. ATS History shutdown happens before the min-held containers are released
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option